# novel-tongue

./: .gitignore  README.md  app.py  c1_aligned_en_py_zh_mix.txt  c1_aligned_es_en_mix.txt  gptify.py  pyproject.toml  requirements.txt
notebooks/: 01_text_importer.ipynb  02_bertalign.ipynb  03_awesome_align.ipynb  04_sentence_interpreter.ipynb  05_alignment_cleaner.ipynb  awesome_align.ipynb  bertalign.ipynb  sentence_interpreter.ipynb  text_importer.ipynb
notebooks/alice_in_wonderland/: c10_en.txt  c10_es.txt  c11_en.txt  c11_es.txt  c12_en.txt  c12_es.txt  c1_es.txt  c3_en.txt  c3_es.txt  c4_en.txt  c4_es.txt  c5_en.txt  c5_es.txt  c6_en.txt  c6_es.txt  c7_en.txt  c7_es.txt  c8_en.txt  c8_es.txt  c9_en.txt  c9_es.txt
notebooks/aligned_texts/: c1_aligned.txt  c1_en_es_alignment.txt
notebooks/hb_calque_texts/: c1_es_mix.txt  c1_mix_es_zh.txt
notebooks/hb_en_ru/: c10_ru.txt  c11_ru.txt  c12_ru.txt  c13_ru.txt  c14_en.txt  c14_ru.txt  c15_ru.txt  c1_ru.txt  c2_en.txt  c2_ru.txt  c3_ru.txt  c4_ru.txt  c5_en.txt  c5_ru.txt  c6_en.txt  c6_ru.txt  c7_ru.txt  c8_ru.txt  c9_ru.txt
notebooks/hb_zh/: c10_en.txt  c10_zh.txt  c11_en.txt  c11_zh.txt  c12_zh.txt  c13_en.txt  c13_zh.txt  c14_zh.txt  c15_zh.txt  c1_en.txt  c1_zh.txt  c2_zh.txt  c3_en.txt  c3_zh.txt  c4_en.txt  c4_zh.txt  c5_zh.txt  (+6 more)
notes/: Grammar diagramming research.md  Idioms.md  Language Teaching Gradu-lateral book.md  MVP.md  Report writeup.md  Scott's original idea.md  Theory research.md  Tools Research.md  Translation and token mappings.md  Viable texts.md  comments section.md
scripts/: build.py
(+23 files in other folders)
